BB-4472: Updated design for product in shopping lists popup - Fixed vertical-align in popup-foot panel

--- a/src/Oro/Bundle/ShoppingListBundle/Resources/public/default/scss/components/shopping-lists-popup/shopping-lists-popup.scss
+++ b/src/Oro/Bundle/ShoppingListBundle/Resources/public/default/scss/components/shopping-lists-popup/shopping-lists-popup.scss
@@ -60,9 +60,11 @@ $shopping-lists-popup-offset: 15px;
 
     &__footer &__list {
         padding: ($shopping-lists-popup-offset / 4) $shopping-lists-popup-offset;
+        vertical-align: middle;
     }
 
     &__footer &__quantity {
         padding: ($shopping-lists-popup-offset / 4) 0 ($shopping-lists-popup-offset / 4) $shopping-lists-popup-offset;
+        vertical-align: middle;
     }
 }
